--- a/데이터분석입문/Week05-02.md
+++ b/데이터분석입문/Week05-02.md
@@ -64,4 +64,4 @@ result = get_temp_data()
 show_chart(result['x_data'], result['max_data'], result['min_data'])
 show_chart([1,2,3,4,5], [10,20,30,40,50], [20,30,40,50,60])
 '''
-![]![image](https://github.com/JD12321/1-2-ME/assets/127118453/03eaf0bd-dc3d-40ef-99d2-93237ee12790)
+![image](https://github.com/JD12321/1-2-ME/assets/127118453/03eaf0bd-dc3d-40ef-99d2-93237ee12790)
