Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -7,6 +7,6 @@
 <p><b>◈ 원격 저장소를 지역 저장소에 복제(clone)</b></p>
 <p>&nbsp&nbsp&nbsp- 공개된 저장소는 소유와 관계 없이 누구나 가능</p><br>
 
-<h3>원격 저장소 생성과 복제</h3>
+<h3>(2) 원격 저장소 생성과 복제</h3>
 <p><b>◈ 깃허브 원격 저장소 생성</b></p>
 <p>&nbsp&nbsp&nbsp- 공개된 저장소는 소유와 관계 없이 누구나 가능</p><br>
