Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -5,8 +5,15 @@
 
 <h3>(1) 클론 개념</h3>
 <p><b>◈ 원격 저장소를 지역 저장소에 복제(clone)</b></p>
-<p>&nbsp&nbsp&nbsp- 공개된 저장소는 소유와 관계 없이 누구나 가능</p><br>
+<p>&nbsp&nbsp - 공개된 저장소는 소유와 관계 없이 누구나 가능</p><br>
 
-<h3>(2) 원격 저장소 생성과 복제</h3>
-<p><b>◈ 깃허브 원격 저장소 생성</b></p>
-<p>&nbsp&nbsp&nbsp- 공개된 저장소는 소유와 관계 없이 누구나 가능</p><br>
+<h3>(2) 원격 저장소 복제</h3>
+<h4>◈ PC 깃에서 원격저장소 복제(git clone)</h4>
+<p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp º 원격 저장소와 동일한 이름으로 복제</p>
+
+<p>&nbsp&nbsp <b>- $ git clone [복사된-주소] [새로운-폴더명]</b></p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp º 하부 폴더 [새로운-폴더명] 이름으로 복제</p>
+
+<p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp º 현재 폴더에 바로 복제</p>
