--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -17,3 +17,13 @@
 <br>
 <p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp º 현재 폴더에 바로 복제</p>
+<br>
+<h3>(3) 원격 저장소 별칭 이름</h3>
+<h4>◈ 원격저장소 별칭 이름 점검</h4>
+<p>&nbsp&nbsp <b>- $ git remote</b></p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp º 원격 저장소 목록</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp -> 기본 이름 origin 점검</p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp -> 위에서 clone을 했기 때문에 별칭 origin이 위의 주소가 설정</p>
+<br>
+<h4>◈ $ git remote -v</h4>
+<p>&nbsp&nbsp <b>- 저장소 주소 등 원격 저장소 정보 목록 표시</b></p>
