Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -27,3 +27,14 @@
 <br>
 <h4>◈ $ git remote -v</h4>
 <p>&nbsp&nbsp <b>- 저장소 주소 등 원격 저장소 정보 목록 표시</b></p>
+<br>
+<h3>(3) 깃에서 복사 실행</h3>
+<h4>◈ 명령어</h4>
+<p>&nbsp&nbsp <b>- $ git clone 저장소주소 [저장소폴더명]</b></p>
+<p>&nbsp&nbsp&nbsp&nbsp&nbsp º 원격 저장소 목록</p>
+<br>
+<h4>◈ 자신의 지역 저장소에 복사 명령</h4>
+<p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git</b></p>
+<br>
+<h4>◈ 하부 폴더 지정해서 복사</h4>
+<p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git 하부폴더명_다른저장소이름</b></p>
