--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -36,5 +36,10 @@
 <h4>◈ 자신의 지역 저장소에 복사 명령</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git</b></p>
 <br>
+<h3>(4) 원격저장소 이름과 복제되는 지역 저장소 이름 다르게</h3>
 <h4>◈ 하부 폴더 지정해서 복사</h4>
-<p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git 하부폴더명_다른저장소이름</b></p>
+<p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git 하부폴더명_다른저장소이름</b></p>
+<br>
+<h4>◈ 현재 폴더에 복사</h4>
+<p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git .</b></p>
+<br>
