Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -43,3 +43,23 @@
 <h4>◈ 현재 폴더에 복사</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git .</b></p>
 <br>
+<h3>(5) 복사된 지역 저장소에 이동 후 점검</h3>
+<h4>◈ $ git remote</h4>
+<p>&nbsp&nbsp <b>- 원격 저장소 이름 목록만</b></p>
+<br>
+<h4>◈ $ git remote -v</h4>
+<p>&nbsp&nbsp <b>- 원격 저장소 주소와 이름 목록</b></p>
+<br>
+<h3>(6) 원격 자장소 별칭 관리</h3>
+<h4>◈ $ git remote add origin URL</h4>
+<p>&nbsp&nbsp <b>- 원격 저장소 별칭 저장</b></p>
+<br>
+<h4>◈ $ git remote show origin</h4>
+<p>&nbsp&nbsp <b>- 자세한 정보</b></p>
+<br>
+<h4>◈ $ git remote rename origin org</h4>
+<p>&nbsp&nbsp <b>- 이름 수정</b></p>
+<br>
+<h4>◈ $ git remote rm org</h4>
+<p>&nbsp&nbsp <b>- 삭제</b></p>
+<br>
