--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -1,4 +1,4 @@
-<h1>16. 원격 저장소 복제 clone</h1><hr><br>
+<h1>16. 원격 저장소 복제 clone</h1><hr><hr><br>
 
 
 <h2>1) 지역에서 깃허브 원격 저장소 복제 clone</h2>
@@ -6,7 +6,7 @@
 <h3>(1) 클론 개념</h3>
 <p><b>◈ 원격 저장소를 지역 저장소에 복제(clone)</b></p>
 <p>&nbsp&nbsp - 공개된 저장소는 소유와 관계 없이 누구나 가능</p>
-<br>
+<br><hr>
 <h3>(2) 원격 저장소 복제</h3>
 <h4>◈ PC 깃에서 원격저장소 복제(git clone)</h4>
 <p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
@@ -17,7 +17,7 @@
 <br>
 <p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp º 현재 폴더에 바로 복제</p>
-<br>
+<br><hr>
 <h3>(3) 원격 저장소 별칭 이름</h3>
 <h4>◈ 원격저장소 별칭 이름 점검</h4>
 <p>&nbsp&nbsp <b>- $ git remote</b></p>
@@ -27,36 +27,35 @@
 <br>
 <h4>◈ $ git remote -v</h4>
 <p>&nbsp&nbsp <b>- 저장소 주소 등 원격 저장소 정보 목록 표시</b></p>
-<br>
-<h3>(3) 깃에서 복사 실행</h3>
+<br><hr>
+<h3>(4) 깃에서 복사 실행</h3>
 <h4>◈ 명령어</h4>
 <p>&nbsp&nbsp <b>- $ git clone 저장소주소 [저장소폴더명]</b></p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp º 원격 저장소 목록</p>
 <br>
 <h4>◈ 자신의 지역 저장소에 복사 명령</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git</b></p>
-<br>
-<h3>(4) 원격저장소 이름과 복제되는 지역 저장소 이름 다르게</h3>
+<br><hr>
+<h3>(5) 원격저장소 이름과 복제되는 지역 저장소 이름 다르게</h3>
 <h4>◈ 하부 폴더 지정해서 복사</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git 하부폴더명_다른저장소이름</b></p>
 <br>
 <h4>◈ 현재 폴더에 복사</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git .</b></p>
-<br>
-<h3>(5) 복사된 지역 저장소에 이동 후 점검</h3>
+<br><hr>
+<h3>(6) 복사된 지역 저장소에 이동 후 점검</h3>
 <h4>◈ $ git remote</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 이름 목록만</b></p>
 <br>
 <h4>◈ $ git remote -v</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 주소와 이름 목록</b></p>
-<br>
-<h3>(6) 원격 자장소 별칭 관리</h3>
+<br><hr>
+<h3>(7) 원격 자장소 별칭 관리</h3>
 <h4>◈ $ git remote add origin URL</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 별칭 저장</b></p>
 <br>
 <h4>◈ $ git remote show origin</h4>
 <p>&nbsp&nbsp <b>- 자세한 정보</b></p>
-<br>
 <h4>◈ $ git remote rename origin org</h4>
 <p>&nbsp&nbsp <b>- 이름 수정</b></p>
 <br>
