Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -1,11 +1,11 @@
-<h1>16. 원격 저장소 복제 clone</h1><hr><hr><br>
-
+<h1>16. 원격 저장소 복제 clone</h1>
+<hr><hr>
 <h2>1) 지역에서 깃허브 원격 저장소 복제 clone</h2>
-
+<hr><hr>
 <h3>(1) 클론 개념</h3>
-<p><b>◈ 원격 저장소를 지역 저장소에 복제(clone)</b></p>
+<h4><b>◈ 원격 저장소를 지역 저장소에 복제(clone)</b></h4>
 <p>&nbsp&nbsp - 공개된 저장소는 소유와 관계 없이 누구나 가능</p>
-<br><hr>
+<hr>
 <h3>(2) 원격 저장소 복제</h3>
 <h4>◈ PC 깃에서 원격저장소 복제(git clone)</h4>
 <p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
@@ -16,7 +16,7 @@
 <br>
 <p>&nbsp&nbsp <b>- $ git clone [복사된-주소]</b></p>
 <p>&nbsp&nbsp&nbsp&nbsp&nbsp º 현재 폴더에 바로 복제</p>
-<br><hr>
+<hr>
 <h3>(3) 원격 저장소 별칭 이름</h3>
 <h4>◈ 원격저장소 별칭 이름 점검</h4>
 <p>&nbsp&nbsp <b>- $ git remote</b></p>
@@ -26,7 +26,7 @@
 <br>
 <h4>◈ $ git remote -v</h4>
 <p>&nbsp&nbsp <b>- 저장소 주소 등 원격 저장소 정보 목록 표시</b></p>
-<br><hr>
+<hr>
 <h3>(4) 깃에서 복사 실행</h3>
 <h4>◈ 명령어</h4>
 <p>&nbsp&nbsp <b>- $ git clone 저장소주소 [저장소폴더명]</b></p>
@@ -34,21 +34,21 @@
 <br>
 <h4>◈ 자신의 지역 저장소에 복사 명령</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git=clone.git</b></p>
-<br><hr>
+<hr>
 <h3>(5) 원격저장소 이름과 복제되는 지역 저장소 이름 다르게</h3>
 <h4>◈ 하부 폴더 지정해서 복사</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git 하부폴더명_다른저장소이름</b></p>
 <br>
 <h4>◈ 현재 폴더에 복사</h4>
 <p>&nbsp&nbsp <b>- $ git clone https://github.com/ai7dnn/git-clone.git .</b></p>
-<br><hr>
+<hr>
 <h3>(6) 복사된 지역 저장소에 이동 후 점검</h3>
 <h4>◈ $ git remote</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 이름 목록만</b></p>
 <br>
 <h4>◈ $ git remote -v</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 주소와 이름 목록</b></p>
-<br><hr>
+<hr>
 <h3>(7) 원격 자장소 별칭 관리</h3>
 <h4>◈ $ git remote add origin URL</h4>
 <p>&nbsp&nbsp <b>- 원격 저장소 별칭 저장</b></p>
@@ -61,4 +61,3 @@
 <br>
 <h4>◈ $ git remote rm org</h4>
 <p>&nbsp&nbsp <b>- 삭제</b></p>
-<br>
