Update 17. 지역과 원격 저장소 연동 push pull.md

--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -1,16 +1,16 @@
 # 17. 지역과 원격 저장소 연동 push pull
 * * *
 - - -
-## 1) 깃허브 원격 저장소 수정 후 pull</h2>
+## 1) 깃허브 원격 저장소 수정 후 pull
 * * *
 - - -
 ### (1) 깃 깃허브 push pull
 #### ◈ 일상 생활
-   - push (밀기), pull (끌기)
+   - Push (밀기), Pull (끌기)
 
 
 #### ◈ 깃허브
-   - push (올리기), pull (내리기)
+   - Push (올리기), Pull (내리기)
 * * *
 ### (2) 원격 저장소 수정 후 지역 저장소에서 pull
 #### ◈ 깃허브 원격 저장소에서 수정 후 커밋
@@ -18,3 +18,12 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/4e5bb6f9-a712-44a0-a44b-7e36cf19b030)
 * * *
+## 2) 지역에서 원격 저장소로 push
+* * *
+- - -
+### (1) 지역 저장소에서 push
+#### ◈ 쓰기 권한이 있어야 push가 가능
+   - 자신의 저장소나 다른 사람의 저장소라면 협업자(collaborator)로 등록
+
+
+#### ◈ Push
