--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -8,7 +8,6 @@
 #### ◈ 일상 생활
    - Push (밀기), Pull (끌기)
 
-
 #### ◈ 깃허브
    - Push (올리기), Pull (내리기)
 * * *
@@ -25,5 +24,9 @@
 #### ◈ 쓰기 권한이 있어야 push가 가능
    - 자신의 저장소나 다른 사람의 저장소라면 협업자(collaborator)로 등록
 
-
 #### ◈ Push
+   - 로컬 저장소에서 남겨놓은 코드 변경 이력들이 원격 저장소로 전송
+
+#### ◈ 명령
+   - $ git push <저장소별칭명> <브랜치명>
+      - $ git push origin topic
