--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -36,21 +36,25 @@
 #### ◈ 옵션 -u 사용
    - 최초 한 번만 저장소명과 브랜치명을 입력하고 그 이후에는 모든 인자를 생략 가능
       - $ git push origin topic
+    
    - 성공 이후 간단히 다음으로 가능
       - $ git push
 
-#### ◈ 대부분의 경우에는 로컬 저장소와 원격 저장소에서 동일한 브랜치 이름을 사용하기 때문에 항상 현재 브랜치를 기준으로    git push 명령어가 작동한다면 매우 편리
+#### ◈ 대부분의 경우에는 로컬 저장소와 원격 저장소에서 동일한 브랜치 이름을 사용하기 때문에 항상 현재 브랜치를 기준으로 git push 명령어가 작동한다면 매우 편리
    - 설정 변수 push.default를 current로 설정
       - $ git config --global push.default current
-   - 어느 브랜치에서 작업을 하든 git push만 날리면 원격 저장소에 동일한<br>브랜치 코드 변경이 업로드
+
+   - 어느 브랜치에서 작업을 하든 git push만 날리면 원격 저장소에 동일한 브랜치 코드 변경이 업로드
       - $ git push
 * * *
 ### (3) git pull = git fetch + git merge
 
 #### ◈ git pull 명령
    - fetch 명령과 병합하는 merge 명령이 순차적으로 진행
+
    - fetch 명령
       - 원격 저장소의 정보를 로컬(remote/origin) 저장소로 가져오는 명령
+
    - merge 명령
       - 변경된 정보를 로컬 저장소의 내용과 병합
 
