Update 17. 지역과 원격 저장소 연동 push pull.md

--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -1,4 +1,4 @@
-# 17. 지역과 원격 저장소 연동 push pull
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/d262d746-b434-43f0-8b9b-9eab282c7592)# 17. 지역과 원격 저장소 연동 push pull
 * * *
 - - -
 ## 1) 깃허브 원격 저장소 수정 후 pull
@@ -59,7 +59,7 @@
    - merge 명령
       - 변경된 정보를 로컬 저장소의 내용과 병합
 
-#### fetch 명령으로 작업한 내용을 확인한 후
+#### ◈ fetch 명령으로 작업한 내용을 확인한 후
    - merge 여부를 결정하는 과정
       - 병합(merge)
 
@@ -67,3 +67,19 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/dd398416-e25b-4fec-a973-15aa8d9680b0)
 * * *
+### (4) fetch
+
+#### ◈ 원격 저장소에서 로컬 저장소로 소스를 가져와 병합을 미수행하는 명령
+   - 단지 소스를 가저올 뿐 병합을 하지 않음
+
+#### ◈ 명령어
+   - $ git fetch <remote>
+   
+      - git fetch origin
+
+#### ◈ fetch후 이후 origin/main, origin/HEAD가 더 최신의 위치에 있음
+   - 지역인 HEAD의 main이 이후에 있음
+
+      - $ git log --all --oneline --graph
+* * *
+### 
