Update 17. 지역과 원격 저장소 연동 push pull.md

--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -1,4 +1,4 @@
-![image](https://github.com/JD12321/1-2-STD/assets/127118453/d262d746-b434-43f0-8b9b-9eab282c7592)# 17. 지역과 원격 저장소 연동 push pull
+17. 지역과 원격 저장소 연동 push pull
 * * *
 - - -
 ## 1) 깃허브 원격 저장소 수정 후 pull
