Update 17. 지역과 원격 저장소 연동 push pull.md

--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -1,4 +1,4 @@
-17. 지역과 원격 저장소 연동 push pull
+# 17. 지역과 원격 저장소 연동 push pull
 * * *
 - - -
 ## 1) 깃허브 원격 저장소 수정 후 pull
@@ -82,4 +82,18 @@
 
       - $ git log --all --oneline --graph
 * * *
-### 
+### (5) fetch 후 병합
+
+#### ◈ 깃허브의 내용을 반영하려면 fetch 후 merge 해야함
+   
+   - $ git merge origin/main
+* * *
+### (6) 원격 브랜치
+
+#### ◈ 원격을 포함한 모든 브랜치 파악
+   - 지역의 브랜치와 HEAD
+      - main HEAD
+    
+   - 원격의 브랜치와 HEAD
+      - origin/main origin/HEAD
+* * *
