Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/16. 원격 저장소 복제 clone.md
@@ -62,3 +62,16 @@
 <h4>◈ $ git remote rm org</h4>
 <p>&nbsp&nbsp <b>- 삭제</b></p>
 <hr>
+<h2>Summary</h2>
+<hr><hr>
+<h3>(1) 원격 저장소 복제</h3>
+<h4>◈ $ git clone https://github.com/ai7dnn/git-clone.git</h4>
+<h4>◈ $ git clone https://github.com/ai7dnn/git-clone.git .</h4>
+<h4>◈ $ git clone https://github.com/ai7dnn/git-clone.git mytest</h4>
+<hr>
+<h3>(2) 원격 저장소 관리</h3>
+<h4>◈ $ git remote -v</h4>
+<h4>◈ $ git remote show origin</h4>
+<h4>◈ $ git remote rename origin org</h4>
+<h4>◈ $ git remote git remote rm org</h4>
+<hr>
