--- a/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
+++ b/오픈소스소프트웨어/17. 지역과 원격 저장소 연동 push pull.md
@@ -97,3 +97,22 @@
    - 원격의 브랜치와 HEAD
       - origin/main origin/HEAD
 * * *
+## Summary
+* * *
+- - -
+### (1) 원격 저장소 복제 연동
+#### ◈ git clone https://github.com/atom/atom.git
+* * *
+### (2) 원격 저장소 수정 사항 pull로 지역 저장소로 가져오기
+#### ◈ git pull origin main
+#### ◈ git pull
+* * *
+### (3) 원격 저장소 복제 연동
+#### ◈ git fetch origin main
+#### ◈ git fetch
+#### ◈ git merge origin/main
+* * *
+### (4) 원격 저장소 복제 연동
+#### ◈ git push origin main
+#### ◈ git push
+* * *
