Update 16. 원격 저장소 복제 clone.md

--- a/오픈소스소프트웨어/Week09/16. 원격 저장소 복제 clone.md
+++ b/오픈소스소프트웨어/Week09/16. 원격 저장소 복제 clone.md
@@ -62,7 +62,7 @@
 <h4>◈ $ git remote rm org</h4>
 <p>&nbsp&nbsp <b>- 삭제</b></p>
 <hr>
-<h2>Summary</h2>
+<h2>== Summary ==</h2>
 <hr><hr>
 <h3>(1) 원격 저장소 복제</h3>
 <h4>◈ $ git clone https://github.com/ai7dnn/git-clone.git</h4>
