Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -13,6 +13,7 @@
 
 #### ◈ Open Source Initiative(OSI)
   - opensource.org
+
   - 공개 소스 정의(OSD)의 관리 및 촉진을 담당하는 비영리 조합
     - OSI가 인증하는 공개 소스 소프트웨어(OSS) 인증 마크
 
@@ -24,3 +25,14 @@
     - 소프트웨어의 향상과 발전
     - 여러 사람들이 고치고 쓰고 버그를 개선하는 것이 보다 빠를 수 있음
 - - -
+### (2) 자유 소프트웨어에서 출발한 OSS
+#### ◈ 자유 소프트웨어(Free Software)
+  - 리처드 스톨먼(Richard Stallman), 자유 소프트웨어 재단 설립
+  - GNU 프로젝트와 관련된 소프트웨어에서 자유를 중시
+
+    - GNU["GNU's Not Unix!“]: 자유 소프트웨어의 운영체제이자 SW
+    - 요리의 기본 레시피를 보고 더 나은 요리를 위한 레시피를 만들듯이 소프트웨어 개발도 그렇게 이루어질 수 있다는 것이 바로 GNU(GNU is Not Unix) 정신의 기본
+    - Free는 무료라는 의미가 아닌 자유라는 의미
+
+  - 카피레프트(Copyleft, Copyright의 반대되는 개념)
+    - 제작자에게 저작권은 인정하면서 어느 누구나 소프트웨어를 복제해 사용할 수 있는 권리를 주어야 한다는 개념을 갖는 SW 의미
