Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -36,3 +36,21 @@
 
   - 카피레프트(Copyleft, Copyright의 반대되는 개념)
     - 제작자에게 저작권은 인정하면서 어느 누구나 소프트웨어를 복제해 사용할 수 있는 권리를 주어야 한다는 개념을 갖는 SW 의미
+- - -
+### (3) 오픈소스 방식의 의미
+#### ◈ 오픈소스 지원 관리 서버
+  - 소스코드를 통해 여러 개발자가 협업하고 공유하며 이를 지원하는 방안을 마련
+
+    - github, gitlab, bitbucket
+  - 오픈소스 커뮤니티 내의 사고 및 협업 양식
+    - 커뮤니티에서 개발된 아이디어와 소프트웨어를 교환
+    - 창의적이고 과학적이며 기술적인 발전을 이끌어낼 수 있음
+#### ◈ 협업 방식
+  - 서로 간에 소스코드를 사용, 변경 및 공유할 수 있도록 커뮤니티 프로덕션과 동료 평가에 의존
+
+  - 개발자들은 보다 혁신적인 소프트웨어 솔루션을 만들기 위해 인사이트, 아이디어 및 코드를 공유
+  
+  - 모든 사용자가 재활용성과 접근성을 향상시키기 위해 이를 수정, 개선 및 재분배할 수 있도록 보장
+  
+  - 대규모 협업의 기본 원칙으로 운용
+    - 일반 사용자를 위한 보다 지속 가능한 소프트웨어 개발을 구축
