Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -54,3 +54,29 @@
   
   - 대규모 협업의 기본 원칙으로 운용
     - 일반 사용자를 위한 보다 지속 가능한 소프트웨어 개발을 구축
+- - -
+### (4) 오픈소스 소프트웨어 장단점
+#### ◈ 소스코드를 공개
+  - 누구든 보다 쉽게 연구하여, 새로운 프로그래밍 기술을 개발
+
+    - 학생은 오픈소스 라이센스를 통해 코드를 편집하고, 친구 또는 보다 광범위한 오픈소스 커뮤니티와 공유
+    - 기존 오픈소스 프로젝트를 수정해 실질적으로 커뮤니티에 기여하는 등 실습이 가능
+#### ◈ 커스터마이징과 혁신 지원
+  - 기업이 구체적인 요구 사항에 맞게 커스터마이징 가능
+  
+  - 원래 소스코드에는 포함되지 않았던 새로운 사용자 경험으로 혁신할 수 있도록 지원
+#### ◈ 단점
+  - 공개의 의무
+  
+  - 품질보증 및 유지보수, 보안 등의 어려움
+- - -
+### (5) 오픈소스 개발 모델
+#### ◈ 대부분의 웹을 지원하는 서비스 스택 모델 : LAMP
+  - Linux : 오픈소스 운영 체제(OS)이자 세계 최대 규모의 오픈소스 프로젝트
+
+  - Apache : 초기 웹에서 핵심 역할을 한 오픈소스 크로스 플랫폼 웹 서버
+
+  - MySQL : 대부분의 데이터베이스 기반 웹 애플리케이션에서 사용하는 오픈소스 관계형 데이터베이스 관리 시스템
+
+  - PHP : 소프트웨어 개발에 사용되는 범용 스크립팅 언어 (가끔 Perl 또는 Python 언어로 대체됨)
+- - -
