Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -80,3 +80,13 @@
 
   - PHP : 소프트웨어 개발에 사용되는 범용 스크립팅 언어 (가끔 Perl 또는 Python 언어로 대체됨)
 - - -
+### (5) 다양한 오픈소스 소프트웨어
+#### ◈ 다양한 오픈소스 개발 모델
+  - Android 모바일 OS
+
+  - Mozilla Firefox 웹 브라우저
+
+  - Office 제품군인 OpenOffice 및 LibreOffice
+
+  - 버전 제어 시스템인 Git
+- - -
