Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -90,3 +90,15 @@
 
   - 버전 제어 시스템인 Git
 - - -
+## 1) 오픈소스 소프트웨어 개요
+- - -
+* * *
+### (1) 오픈소스 소프트웨어 라이선스 종류
+#### ◈ GNU General Public©(GPL)
+  - AGPL, LGPL
+#### ◈ MIT License©
+#### ◈ Apache®
+#### ◈ BSD
+#### ◈ MySQL™
+#### ◈ SUSE
+#### ◈ Ubuntu®
