Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -80,7 +80,7 @@
 
   - PHP : 소프트웨어 개발에 사용되는 범용 스크립팅 언어 (가끔 Perl 또는 Python 언어로 대체됨)
 - - -
-### (5) 다양한 오픈소스 소프트웨어
+### (6) 다양한 오픈소스 소프트웨어
 #### ◈ 다양한 오픈소스 개발 모델
   - Android 모바일 OS
 
@@ -102,4 +102,10 @@
 #### ◈ MySQL™
 #### ◈ SUSE
 #### ◈ Ubuntu®
+- - -
+### (2) 오픈소스 라이선스 저작권
+#### ◈ 오픈소스 SW 개발자가 만들어 놓은 저작권의 범위에 따라 해당 소프트웨어를 사용
+  - 위반할 경우, 라이선스 위반 및 저작권 침해로 이에 대한 법적 책임이 따름
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/152dbdf9-e88d-460c-bf09-18f8eb0a00da)
 - - -
