Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -109,3 +109,25 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/152dbdf9-e88d-460c-bf09-18f8eb0a00da)
 - - -
+### (3) 소스코드 반환의무
+#### ◈ GPL, AGPL, LGPL, MPL, EPL 등
+  - 링크되거나 코드가 포함된 SW의 소스코드를 공개
+  
+  - 특허, 영업비밀, 핵심 기술 등이 외부로 유출될 가능성이 있으니 주의
+
+  - 저작권 고지의무
+    - 저작권법에 따른 법적 권리를 보장하는 것으로 공개 SW 라이선스에서 준수하지 않을 시 법정 분쟁의 가능성이 생김
+- - -
+### (4) 1. GPL(GNU - General Public License)
+#### ◈ 자유소프트웨어재단(FSS)에서 만든 라이선스
+  - 자유소프트웨어재단 설립자인 리처드 스톨만에 의해서 만들어졌음
+
+  - 가장 많이 알려진 카피레프트에 속한 라이선스
+
+  - 프로그램은 목적이나 형태의 제한없이 사용이 가능
+
+  - 프로그램을 이후 수정하고 배포하는 모든 경우에 무조건 GPL로 공개를 해야 함
+    - GPL을 따른 프로그램을 사용해서 2차 저작물을 만들면 2차 저작물도 반드시 GPL 라이센스를 명시해야 함
+#### ◈ GPL 라이센스 적용 예
+  - 리눅스 커널, Git, 마리아 DB, 워드프레스, 파이어폭스(v2.0) 등
+- - -
