--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -149,21 +149,19 @@
 #### ◈ LGPL 라이센스 적용 예
   - 파이어폭스(v2.1) 등
 - - -
-### (7) 2. AGPL(GNU - Affero GPL)
-#### ◈ GPL을 기반으로 만든 라이선스
-  - 네트워크로 상호 작용하는 소프트웨어의 소스코드도 공개해야 한다는 조항을 추가한 라이선스
-    - 어떤 개발자가 프로그램의 소스코드를 수정해서 사용하고 프로그램을 배포하지 않았을 때 발생할 수 있는 소스코드의 공유 불가 현상을 해결하기 위해 만들어짐
-  - 서버에서 프로그램을 실행해서 다른 사용자들과 통신 중
-    - 실행되고 있는 프로그램의 소스코드를 사용자들이 다운로드할 수 있도록 해야 하는 조항을 포함
-#### ◈ AGPL 라이센스 적용 예
-  - 몽고DB 등
+### (7) 4. Apache License
+#### ◈ 소스코드 공개에 대한 의무사항은 라이센스에 포함되어 있지 않음
+  - 아파치 라이센스 소스코드를 수정하고 배포 시
+    - 아파치 라이센스 버전 2.0을 꼭 포함시켜야 하고 아파치재단의 소프트웨어라는 사실을 명시
+#### ◈ Apache License 적용 예
+  - 안드로이드, 하둡 등
 - - -
-### (8) 2. AGPL(GNU - Affero GPL)
-#### ◈ GPL을 기반으로 만든 라이선스
-  - 네트워크로 상호 작용하는 소프트웨어의 소스코드도 공개해야 한다는 조항을 추가한 라이선스
-    - 어떤 개발자가 프로그램의 소스코드를 수정해서 사용하고 프로그램을 배포하지 않았을 때 발생할 수 있는 소스코드의 공유 불가 현상을 해결하기 위해 만들어짐
-  - 서버에서 프로그램을 실행해서 다른 사용자들과 통신 중
-    - 실행되고 있는 프로그램의 소스코드를 사용자들이 다운로드할 수 있도록 해야 하는 조항을 포함
-#### ◈ AGPL 라이센스 적용 예
-  - 몽고DB 등
+### (8) 5. MIT License
+#### ◈ MIT에서 학생들을 지원하기 위해서 만든 라이선스
+  - 라이센스와 저작권 관련 명시 의무
+
+  - 가장 느슨한 조건을 가지고 있어서 많은 사람들이 사용하기 용이
+    - 사용자가 최소의 제한사항으로 원래 코드를 수정할 수 있도록 허용하는 무료 소프트웨어 라이센스
+#### ◈ MIT License 라이센스 적용 예
+  - 부트스트랩, Angular.js, Backbone.js, jQuery
 - - -
