Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -165,3 +165,28 @@
 #### ◈ MIT License 라이센스 적용 예
   - 부트스트랩, Angular.js, Backbone.js, jQuery
 - - -
+### (9) 대표 라이선스 정리
+#### ◈ 주요 의무사항
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/efde2cc4-6bdc-4c84-a8b5-fa8f5b072972)
+
+#### ◈ 의무 강도에 따른 분류
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/a7b3001d-d63e-4341-a808-5c26deb51d1f)
+* * *
+## == Summary ==
+* * *
+- - -
+### (1) $ 오픈소스 소프트웨어의 의미
+#### ◈ 소프트웨어의 소스코드를 자유롭게 읽고, 수정 및 재배포가 가능
+* * *
+### (2) 오픈소스 소프트웨어 개발을 지원하는 서버인 깃허브에서의 협업 방식
+#### ◈ github, gitlab, bitbucket
+* * *
+### (3) 대표적인 오픈소스 소프트웨어
+#### ◈ 파이썬, 사이킷런, 파이토치, 텐서플로, MySql, 몽고DB 등
+* * *
+### (4) 오픈소스 소프트웨어의 저작권을 이해할 수 있다.
+#### ◈ 의무 강도에 따른 분류
+  - - GPL, LGPL, Apache, BSD, MIT 순으로 의무 강도가 낮아짐
+* * *
