--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -134,8 +134,10 @@
 ### (5) 2. AGPL(GNU - Affero GPL)
 #### ◈ GPL을 기반으로 만든 라이선스
   - 네트워크로 상호 작용하는 소프트웨어의 소스코드도 공개해야 한다는 조항을 추가한 라이선스
+    
     - 어떤 개발자가 프로그램의 소스코드를 수정해서 사용하고 프로그램을 배포하지 않았을 때 발생할 수 있는 소스코드의 공유 불가 현상을 해결하기 위해 만들어짐
   - 서버에서 프로그램을 실행해서 다른 사용자들과 통신 중
+    
     - 실행되고 있는 프로그램의 소스코드를 사용자들이 다운로드할 수 있도록 해야 하는 조항을 포함
 #### ◈ AGPL 라이센스 적용 예
   - 몽고DB 등
@@ -143,8 +145,10 @@
 ### (6) 3. LGPL(GNU - Lesser GPL)
 #### ◈ 보다 완화된 GPL 라이선스
   - GPL 라이센스를 사용할 때 반드시 소스코드를 다시 GPL로 공개해야 하는 부담 때문에 실무에서 사용되기 어려운 점을 보완하기 위해서 만들어진 라이선스
+    
     - 전체 소스코드를 공개하지 않고 사용된 오픈소스 라이브러리에 대한 소스코드만 공개
   - 초기에는 한정된 라이브러리에만 적용된다는 것을 나타내기 위해서 Library GPL이라고 불렀으나 이 용어가 모든 라이브러리에 해당된다는 오해를 만들기 쉽기 때문에
+    
     - 이후에 Lesser GPL로 명칭을 변경
 #### ◈ LGPL 라이센스 적용 예
   - 파이어폭스(v2.1) 등
@@ -152,6 +156,7 @@
 ### (7) 4. Apache License
 #### ◈ 소스코드 공개에 대한 의무사항은 라이센스에 포함되어 있지 않음
   - 아파치 라이센스 소스코드를 수정하고 배포 시
+
     - 아파치 라이센스 버전 2.0을 꼭 포함시켜야 하고 아파치재단의 소프트웨어라는 사실을 명시
 #### ◈ Apache License 적용 예
   - 안드로이드, 하둡 등
@@ -188,5 +193,5 @@
 * * *
 ### (4) 오픈소스 소프트웨어의 저작권을 이해할 수 있다.
 #### ◈ 의무 강도에 따른 분류
-  - - GPL, LGPL, Apache, BSD, MIT 순으로 의무 강도가 낮아짐
+  - GPL, LGPL, Apache, BSD, MIT 순으로 의무 강도가 낮아짐
 * * *
