Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -35,3 +35,16 @@
     - 가장 최근의 내용이 가장 위에 저장되는 구조
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/c27da320-3d02-4b96-8a47-3019c5bd862b)
+- - -
+### (5) Git stash 필요성
+#### ◈ 브랜치 이동 또는 이전 커밋으로 이동하려면
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git switch bname<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git checkout HEAD~</p>
+
+  - 커밋할 게 없고, 작업 트리가 깨끗해야 함
+#### ◈ 수정한 내용이 있거나 커밋할 게 있는 상황에서 다른 브랜치 이동 또는 이전 커밋으로 이동하려면
+  - 현재 작업 공간의 수정 내용과 인덱스의 내용을 보관할 필요가 있음
+      
+      - 나중에 다시 사용하기 위해
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/d33d3048-0de8-47a8-9f79-66a214bcf705)
