Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -48,3 +48,12 @@
       - 나중에 다시 사용하기 위해
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/d33d3048-0de8-47a8-9f79-66a214bcf705)
+- - -
+### (6) 임시저장 영역에 저장되는 내용
+#### ◈ Stash로 저장되는 내용
+  - 작업 디렉토리 내용과 스테이징 영역 내용이 stash에 저장되고
+
+    - 작업 디렉토리 내용과 스테이징 영역 내용이 최신 커밋 자료로 남음
+   
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/a0c5faa9-c3c4-447b-a2f0-27a6a9df85e0)
+- - -
