Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -57,3 +57,26 @@
    
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/a0c5faa9-c3c4-447b-a2f0-27a6a9df85e0)
 - - -
+## 2) 임시 저장 명령 stash
+- - -
+* * *
+### (1) 임시저장 명령 stash
+#### ◈ 작업 폴더와 스테이징 영역을 숨김(stash)에 저장하고 작업 폴더를 정리
+  - $ git stash
+
+  - $ git stash –m ‘메시지’
+
+  - $ git stash save
+
+  - $ git stash save ‘메시지’
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/51543e69-4b34-4e7e-9825-6ced4c048425)
+
+#### ◈ 옵션
+  - --keep-index, -k
+
+    - 스테이징 영역은 제외하고 작업 폴더만 저장
+  - --include-untracked, -u
+
+    - Untracked 파일도 포함해 저장
+- - -
