Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -80,3 +80,14 @@
 
     - Untracked 파일도 포함해 저장
 - - -
+### (2) 임시저장의 최신 저장 내용으로 다시 복원
+#### ◈ 최근 임시저장 내용을 가져와 반영, stash 목록은 그대로
+  - 기본으로 작업 디렉토리 내용만 다시 복사해 활용
+
+    - $ git stash apply
+  - 스테이지 영역도 함께 복사하기 위해서는 옵션 사용
+
+    - $ git stash apply --index
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/57cbb38c-2bc9-4894-bf0c-92a9d3093b27)
+- - -
