--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -91,3 +91,13 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/57cbb38c-2bc9-4894-bf0c-92a9d3093b27)
 - - -
+### (3) 주요 옵션
+#### ◈ 옵션 –k | --keep-index
+  - 스테이징 영역은 저장하지 않고 그대로 놔둠
+
+  - 그러므로 checkout할 수는 없음
+#### ◈ 옵션 –u | --include-untracked
+  - 스테이징 영역은 저장하지 않고 그대로 놔둠
+#### ◈ 옵션 –p | --patch
+  - 변경된 모든 사항들을 저장하는 것이 아니며 대화형 프롬프트를 통해 자신이 stash에 저장할 것과 저장하지 않을 것을 지정 가능
+- - -
