--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -101,3 +101,12 @@
 #### ◈ 옵션 –p | --patch
   - 변경된 모든 사항들을 저장하는 것이 아니며 대화형 프롬프트를 통해 자신이 stash에 저장할 것과 저장하지 않을 것을 지정 가능
 - - -
+### (4) Stash 목록 보기
+#### ◈ 목록 보기
+  - $ git stash list
+
+    - stash@{0} __<-- 가장 최신 것이 0번__
+    - stash@{1}
+    - stash@{2}
+    - ...
+- - -
