Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -110,3 +110,32 @@
     - stash@{2}
     - ...
 - - -
+### (5) 특정 stash 확인
+#### ◈ 해당 stash 항목이 생성되었을 때의 커밋 자료와 최신 stash 항목 간의 차이로 표시
+  - $ git stash show
+
+    - h.txt | 2 ++
+    - 1 file changed, 2 insertions(+) __<-- 변화된 파일과 변화된 수만 표시__
+  - $ git stash show –p
+
+    - -p: 파일 내용의 차이까지 보이기
+#### ◈ 해당 stash 항목이 생성되었을 때의 커밋 자료와 해당 stash 항목 간의 차이로 표시
+  - $ git stash show stash@{n}
+
+  - $ git stash show stash@{n} –p
+
+    - -p: 내용의 차이까지 보이기
+- - -
+### (6) 임시 저장된 stash 반영
+#### ◈ 최근 또는 지정된 임시저장소 내용을 가져와 반영하고 삭제
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash pop<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash pop stash@{n}</p>
+
+#### ◈ 최근 또는 지정된 임시저장소 내용을 가져와 반영, 작업 디렉토리만 반영, stash 목록은 그대로
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git checkout HEAD~</p>
+
+#### ◈ 최근 또는 지정된 임시저장소 내용을 가져와 반영, 작업 디렉토리와 스테이징 영역도 반영, stash 목록은 그대로
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index stash@{n}</p>
+
+- - -
