Update 19. 오픈소스 소프트웨어 개요.md

--- a/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
+++ b/오픈소스소프트웨어/Week10/19. 오픈소스 소프트웨어 개요.md
@@ -182,7 +182,7 @@
 ## == Summary ==
 * * *
 - - -
-### (1) $ 오픈소스 소프트웨어의 의미
+### (1) 오픈소스 소프트웨어의 의미
 #### ◈ 소프트웨어의 소스코드를 자유롭게 읽고, 수정 및 재배포가 가능
 * * *
 ### (2) 오픈소스 소프트웨어 개발을 지원하는 서버인 깃허브에서의 협업 방식
