Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -139,3 +139,74 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index stash@{n}</p>
 
 - - -
+### (7) 특정 stash 삭제와 모든 stash 삭제
+#### ◈ 최근 임시저장 내용을 삭제
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash drop</p>
+
+#### ◈ 지정된 임시저장 내용을 삭제
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash drop stash@{n}</p>
+
+#### ◈ 모든 stash 목록을 모두 제거
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index </p>
+
+- - -
+### (7) Untracked 파일 삭제
+#### ◈ $ git clean
+  - fatal: clean.requireForce defaults to true and neither -i, -n, nor -f given; refusing to clean
+    - 바로 삭제되지 않음
+#### ◈ $ git clean -i
+  - Would remove the following items:
+  - b c d
+  - 1: clean 2: filter by pattern 3: select by numbers
+  - 4: ask each 5: quit 6: help
+  - What now> a
+  - Remove b [y/N]? y
+  - Remove c [y/N]? y
+  - Remove d [y/N]? y
+  - Removing b
+  - Removing c
+  - Removing d
+#### ◈ $ git clean –f
+  - 무조건 삭제
+- - -
+## == Summary ==
+- - -
+* * *
+### (1) 작업 디렉토리와 스테이징 영역을 숨김(stash)에 저장하고 작업 폴더를 정리
+#### ◈ $ git stash
+#### ◈ $ git stash –m ‘메시지’
+#### ◈ $ git stash save
+#### ◈ $ git stash save ‘메시지’
+- - -
+### (2) 최근 또는 지정된 임시저장소 내용을 가져와 반영하고 삭제
+#### ◈ $ git stash pop
+#### ◈ $ git stash pop stash@{n}
+- - -
+### (3) 최근 또는 지정된 임시저장소 내용을 가져와 반영, 작업 디렉토리만 반영, stash 목록은 그대로
+#### ◈ $ git stash apply
+#### ◈ $ git stash apply stash@{n}
+- - -
+### (4) 최근 또는 지정된 임시저장소 내용을 가져와 반영, 작업 디렉토리와 스테이징 영역도 반영, stash 목록은 그대로
+#### ◈ $ git stash apply --index
+#### ◈ $ git stash apply --index stash@{n}
+- - -
+### (5) 임시저장 목록 보기
+#### ◈ $ git stash list
+- - -
+### (6) 커밋 자료와 최신 stash 항목 간의 차이로 표시
+#### ◈ $ git stash show
+#### ◈ $ git stash show –p
+- - -
+### (7) 커밋 자료와 해당 stash 항목 간의 차이로 표시
+#### ◈ $ git stash show stash@{n}
+#### ◈ $ git stash show stash@{n} -p
+- - -
+### (8) 최근 임시저장 내용을 삭제
+#### ◈ $ git stash drop
+- - -
+### (9) 지정된 임시저장 내용을 삭제
+#### ◈ $ git stash drop stash@{n}
+- - -
+### (10) 모든 stash 목록을 모두 제거
+#### ◈ $ git stash clear
+- - -
