--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -97,7 +97,7 @@
 
   - 그러므로 checkout할 수는 없음
 #### ◈ 옵션 –u | --include-untracked
-  - 스테이징 영역은 저장하지 않고 그대로 놔둠
+  - Untracked 파일도 포함해 저장
 #### ◈ 옵션 –p | --patch
   - 변경된 모든 사항들을 저장하는 것이 아니며 대화형 프롬프트를 통해 자신이 stash에 저장할 것과 저장하지 않을 것을 지정 가능
 - - -
