Update 20. 임시저장 stash.md

--- a/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
+++ b/오픈소스소프트웨어/Week10/20. 임시저장 stash.md
@@ -147,7 +147,7 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash drop stash@{n}</p>
 
 #### ◈ 모든 stash 목록을 모두 제거
-<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash apply --index </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git stash clear</p>
 
 - - -
 ### (7) Untracked 파일 삭제
