Update 22. 다양한 브랜치 병합.md

--- a/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
+++ b/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
@@ -24,9 +24,8 @@
 #### ◈ 브랜치 master에서 병합 명령
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/2ae83b02-f66e-4d54-859d-8cd769ef0ae4)
-
 - - -
-### (2) 빨리 감기 fast-forward 병합의 이해
+### (3) 빨리 감기 fast-forward 병합 수행
 #### ◈ master 브랜치는 단순히 이동
   - 이 때는 합칠 내용이 없음
 
@@ -38,4 +37,40 @@
   - $ git merge bugfix
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/005f97c7-c5eb-4901-ab76-c44441371245)
+- - -
+### (4) 3-way 상태: 두 분기가 갈라진 상태
+#### ◈ 두 브랜치의 조상이 같은 경우
+  - master 브랜치 내의 변경 내용과 bugfix 브랜치 내의 변경 내용을 하나로 통합할 필요
 
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/37678274-625e-4745-8a23-35d9d27474c1)
+#### ◈ 두 브랜치의 조상이 같은 경우
+  - 새로운 커밋을 사용하여 두 기록을 합침
+- - -
+### (5) 3-way 병합 수행
+#### ◈ 새로운 커밋 E 생성
+  - 두 브랜치의 변경을 가져온 'merge commit(병합 커밋)‘ E를 생성
+
+    - 병합 완료 후, 통합 브랜치인 'master' 브랜치로 통합된 이력이 생성
+    - -m이 없으면 메시지 입력할 기본 편집기 실행
+      -> ‘Merge branch bugfix’이 기본 메시지 내용
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/5808dd55-ad33-4e14-9ba9-306ffe88400b)
+- - -
+### (6) 일렬 상태에서 기본이 fast forward 병합
+#### ◈ 병합할 브랜치의 조상이 기준 브랜치인 경우, 즉 일렬 상태에서
+  - 병합 기본은 fast forward 병합
+
+  - 마스터 브랜치에서 브랜치 dev1을 병합
+
+    - 기본이 fast-forward 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/d5d8f82a-64ae-4d78-b8b3-9ba16d67365f)
+- - -
+### (7) 기본이 fast forward 상태에서 non fast forward 병합
+#### ◈ 마스터에서 dev1을 fast forward로 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/40817e19-ca93-4432-bbb6-76a7fc0135cc)
+#### ◈ 마스터에서 dev1을 fast forward로 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/854e5d0d-62e1-473f-971b-379863e88b44)
+- - -
