Update 22. 다양한 브랜치 병합.md

--- a/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
+++ b/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
@@ -74,3 +74,26 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/854e5d0d-62e1-473f-971b-379863e88b44)
 - - -
+### (8) 두 브랜치의 일렬 상태에서 2가지 병합
+#### ◈ 일렬 상태
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/8e715e3b-b371-4005-8fc1-3d8637f89d0d)
+#### ◈ 두 가지 병합 방법
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/880e16cf-2732-44ce-9d32-9ebf51725212)
+- - -
+## 2) 병합의 다양한 옵션
+- - -
+* * *
+### (1) 'non fast-forward 병합' 옵션을 지정
+#### ◈ non fast-forward 병합
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; $ git merge --no-ff {병합할 브랜치 명}</p>
+
+  - 병합 실행 시에 'fast-forward 병합'이 가능한 경우라도 3-way 병합을 수행
+
+    - 병합된 브랜치가 그대로 남기 때문에
+    
+      -> 그 브랜치로 실행한 작업 확인 및 브랜치 관리 면에서 더 유용
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/133a178c-272d-4eb8-a5de-4e390a92701b)
+- - -
