Update 22. 다양한 브랜치 병합.md

--- a/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
+++ b/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
@@ -97,3 +97,56 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/133a178c-272d-4eb8-a5de-4e390a92701b)
 - - -
+### (2) 병합의 다양한 옵션 종류
+#### ◈ $ git merge {병합할_브랜치_명}
+  - 보통의 병합, 융통성 있는 병합
+  
+  - 현 브랜치와 병합할 브랜치가 일렬 상태
+
+    - fast-forward 병합
+
+      -> 새로운 병합 커밋 없이 병합할 브랜치 커밋으로 이동
+  - 현 브랜치와 병합할 브랜치가 갈라져 있는 상태
+
+    - 3-way 병합
+
+      -> 새로운 병합 커밋을 생성해 두 브랜치를 합침
+#### ◈ $ git merge --no-ff {병합할_브랜치_명}
+  - 무조건 3-way 병합되는 옵션
+- - -
+### (3) 병합의 다양한 옵션 종류
+#### ◈ $ git merge --ff-only {병합할_브랜치_명}
+  - 상태가 fast-Forward인 일렬 상태에서만 병합 진행
+#### ◈ $ git merge --squash {병합할_브랜치_명}
+  - 현재 브랜치에 병합 대상과의 합치는 커밋을 하나 생성해 병합
+
+    - 병합되는 브랜치는 사용하지 않고 그대로 남음
+- - -
+### (4) 옵션 --squash
+#### ◈ 강압적인(?) 병합
+  - $ git merge --squash hotfix 
+
+  - 사전적 의미(짓 뭉개다)에서 알 수 있듯이
+
+    - 커밋 이력과 병합되는 브랜치 이력도 남기지 않음
+    - 새로운 커밋에 상대 브랜치의 내용을 모두 합해 새로운 커밋으로 병합
+
+      -> 직접 메시지와 함께 커밋을 해야 함
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/c726fb72-d72d-46fa-90de-b3cdee4c2e7f)
+- - -
+### (5) 옵션 --squash 병합
+#### ◈ 합병 전 상태
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/0471b518-87c4-43f3-94fe-813b67a8e7ba)
+- - -
+### (6) 옵션 --squash 병합 실행
+#### ◈ 수행 전
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/1292f1ea-bd36-47b3-8a7d-5ef8e42d69bb)
+#### ◈ $ git merge --squash topic
+  - $ git commit –m ‘Squash merge 3AB’
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/e5a80c53-bfd8-4147-be3d-29cf176c3a67)
+- - -
+
