Update 22. 다양한 브랜치 병합.md

--- a/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
+++ b/오픈소스소프트웨어/Week11/22. 다양한 브랜치 병합.md
@@ -149,4 +149,19 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/e5a80c53-bfd8-4147-be3d-29cf176c3a67)
 - - -
-
+## == Summary ==
+- - -
+* * *
+### (1) 기준 브랜치에서 hotfix 브랜치 병합
+#### ◈ $ git merge hotfix
+  - fast-forward, 3-way merge
+- - -
+### (2) 무조건 3-way 병합 수행
+#### ◈ $ git merge --no-ff hotfix
+- - -
+### (3) fast-forward인 경우에만 병합 진행
+#### ◈ $ git merge --ff-only hotfix
+- - -
+### (4) 현재 브랜치에서 커밋 하나만 생성해서 병합
+#### ◈ $ git merge --squash hotfix
+- - -
