Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -22,3 +22,5 @@
     - 두 브랜치 모두에서 변경 사항이 달리 발생한 파일
 
       -> 파일 C는 양쪽에서 수정
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/8378db9f-db83-4300-9731-0c77932f3e62)
