Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -7,7 +7,7 @@
 ### (1) 병합에서 충돌 발생 표기
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/07eb7e3b-ee62-4d2f-8a76-108559dfeb7c)
-
+- - -
 ### (2) 병합 충돌(conflict) 이해
 #### ◈ 3-way 상태에서 두 브랜치의 동일 조상인 커밋 1을 기준
   - 병합할 두 브랜치 마지막 커밋을 비교
@@ -24,3 +24,11 @@
       -> 파일 C는 양쪽에서 수정
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/8378db9f-db83-4300-9731-0c77932f3e62)
+- - -
+### (3) 충돌 해결
+#### ◈ 충돌이 발생하면 해당 파일의 충돌을 먼저 해결
+  - 충돌 해결
+    - 직접 파일 내용을 수정 후 저장
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 충돌이 발생한 파일 C를 직접 편집<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> C’ 또는 C” 또는 아예 다르게</p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; 계속해서 add, commit 진행</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; 필요하면 합병된 이전 브랜치 삭제</p>
+
