Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -32,3 +32,5 @@
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> 충돌이 발생한 파일 C를 직접 편집<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -> C’ 또는 C” 또는 아예 다르게</p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; 계속해서 add, commit 진행</p><p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;º&nbsp; 필요하면 합병된 이전 브랜치 삭제</p>
 
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/fcd9c264-356c-4427-be94-38e95f594ab0)
+- - -
