Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -34,3 +34,24 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/fcd9c264-356c-4427-be94-38e95f594ab0)
 - - -
+### (4) 충돌 발생 코드 표시
+#### ◈ 충돌한 파일 내부 표시
+  - __3개의 표시로__ 구분
+    
+    - __*<<<<<<< HEAD*__
+    - 현재 브랜치 HEAD의 수정 내용
+    - __*===========*__
+    - 병합되는 브랜치 feat/list의 수정 내용
+    - __*>>>>>>> feat/list*__
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/7deac327-705f-4497-8669-afd2f2d3c41a)
+- - -
+## 2) 충돌 해결
+- - -
+* * *
+### (1) 병합 취소 후 다시 병합
+#### ◈ 병합 취소
+  - $ git merge --abort 
+#### ◈ 다시 병합
+  - $ git merge feat/list
+
