--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -55,3 +55,5 @@
 #### ◈ 다시 병합
   - $ git merge feat/list
 
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/02d880ef-f86d-4d9f-bf00-06e459cca220)
+- - -
