Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -57,3 +57,10 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/02d880ef-f86d-4d9f-bf00-06e459cca220)
 - - -
+### (2) 충돌 해결
+#### ◈ 충돌 표시 모두 제거
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/14c9f641-5302-45ee-bb3f-7e1fb4025a00)
+#### ◈ 충돌 표시 모두 제거
+  - $ git commit –am 'Resolve conflict, main'
+- - -
