Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -61,6 +61,17 @@
 #### ◈ 충돌 표시 모두 제거
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/14c9f641-5302-45ee-bb3f-7e1fb4025a00)
-#### ◈ 충돌 표시 모두 제거
+#### ◈ 추가, 커밋 다시
   - $ git commit –am 'Resolve conflict, main'
+- - -
+### (3) 충돌 발생 시 상태
+#### ◈ 충돌 후 커밋
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/6bdbe0e0-8adc-4c2b-86f7-c31fdb6515c5)
+- - -
+### (4) 3-way 병합 수행
+#### ◈ 파일 f를 두 브랜치에서 동시에 수정
+  - 충돌 발생
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/d738d692-2dee-4b2d-bed4-790a59cc4ee4)
 - - -
