Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -1,4 +1,4 @@
-# *24. 병합 충돌과 해결*
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/68c5b689-baec-4fc6-ab00-1c1addb0dbf5)# *24. 병합 충돌과 해결*
 - - -
 * * *
 ## 1) 병합 충돌
@@ -74,4 +74,38 @@
   - 충돌 발생
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/d738d692-2dee-4b2d-bed4-790a59cc4ee4)
+- - -
+### (5) 병합 전까지 수행
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/b62716f3-8fca-4678-8016-5b459605171a)
+- - -
+### (6) 병합 시 충돌 발생
+#### ◈ 충돌 후 코딩
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/b718e194-5e2f-446c-b973-199a95325919)
+- - -
+### (7) 원하는 코드로 수정
+#### ◈ 모든 소스로 구성
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/7106389f-8d1e-446b-af92-0dadd3821dc7)
+- - -
+### (8) 코드 수정 후 반드시 커밋이 필요
+#### ◈ 커밋 수행
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/fc1c6552-80eb-4e18-905b-3c3f35f78c64)
+- - -
+## == Summary ==
+- - -
+* * *
+### (1) 3-way 충돌 발생
+#### ◈ $ git merge hotfix
+- - -
+### (2) 충돌한 파일을 인지하고 파일 수정
+#### ◈ $ code file
+- - -
+### (3) 수정 후 다시 add, commit
+#### ◈ $ git commit –am ‘msg’
+- - -
+### (4) 충돌 이후 병합 취소
+#### ◈ $ git merge --abort
 - - -
