Update 24. 병합 충돌과 해결.md

--- a/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
+++ b/오픈소스소프트웨어/Week11/24. 병합 충돌과 해결.md
@@ -1,4 +1,4 @@
-![image](https://github.com/JD12321/1-2-STD/assets/127118453/68c5b689-baec-4fc6-ab00-1c1addb0dbf5)# *24. 병합 충돌과 해결*
+# *24. 병합 충돌과 해결*
 - - -
 * * *
 ## 1) 병합 충돌
