Update 25. 브랜치 리베이스 rebase.md

--- a/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
+++ b/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
@@ -1,1 +1,51 @@
+# *25. 브랜치 리베이스 rebase*
+- - -
+* * *
+## 1) 병합 rebase
+- - -
+* * *
+### (1) 3-way 상태에서 base의 이해
+#### ◈ 'master' 브랜치 커밋 B에서 분기되는 'bugfix' 브랜치
+  - 커밋 B
 
+    - 현재 master와 bugfix의 공통 조상
+
+      -> 이를 base라 칭함
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/23b0ec12-cad5-4eda-b5ab-d1303fb3b564)
+- - -
+### (2) 선형적 통합 rebase 이해
+#### ◈ 브랜치 bugfix에서 base를 바꾸는 재배치하기 이전
+  - 커밋 B
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/5b187602-c66e-4022-8e02-91056276e373)
+
+#### ◈ 재배치 rebase 병합 수행
+  - base를 수정
+
+    - B에서 마스터의 최신 커밋인 D로 수정
+
+      -> D 이후에 bugfix를 배치
+  - 이후 다시 'fast-forward 병합’ 수행: 이 병합을 직접 다시 해야함
+
+    - 'master' 브랜치의 HEAD가 'bugfix' 브랜치 마지막 커밋으로 이동
+
+      -> 로그 이력이 분기 없이 하나의 줄기로 이어짐
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/4a3a2a2c-6371-4293-b83c-8afe34a2f3d6)
+- - -
+## (3) rebase를 이용한 브랜치 병합 과정
+#### ◈ 'fast-forward 병합’ 방식
+  - master 브랜치 뒤로 bugfix 브랜치의 이력이 이동
+
+    - 이력이 하나의 줄기로 이어짐
+  - 충돌 발생이 가능
+#### ◈ rebase만 하면 다음 그림처럼 'master'의 위치는 그대로 유지
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/e12012ee-cad1-45a5-a2ac-1c8776362e97)
+- - -
+#### ◈ 마스터 브랜치의 위치를 변경하기 위해서는
+  - master 브랜치에서 bugfix 브랜치를 fast-foward(빨리 감기) 병합 필요
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/8f083e78-7870-4475-9fc1-e0200f76ed69)
+- - -
