Update 25. 브랜치 리베이스 rebase.md

--- a/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
+++ b/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
@@ -47,3 +47,20 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/8f083e78-7870-4475-9fc1-e0200f76ed69)
 - - -
+## (4) Rebase에서의 충돌
+#### ◈ 충돌 발생 가능
+  - 이동되는 X와 Y의 내용이 'master'의 C, D 커밋들과 충돌하는 부분이 생길 수 있음
+
+    - 각각의 커밋에서 발생한 충돌 내용을 수정 후, 추가, 계속 수행 필요
+#### ◈ 충돌 발생 후 해결 절차
+  - 1. 파일 수정
+
+  - 2. 파일 추가
+
+    - $ git add <수정파일>
+  - 3. rebase 계속 수행, 마지막 메시지 메시지 수정
+
+    - $ git rebase --continue
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/0a2ab083-0d9a-40e1-8c87-6b2903f87d28)
+- - -
