Update 25. 브랜치 리베이스 rebase.md

--- a/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
+++ b/오픈소스소프트웨어/Week12/25. 브랜치 리베이스 rebase.md
@@ -64,3 +64,40 @@
 
 ![image](https://github.com/JD12321/1-2-STD/assets/127118453/0a2ab083-0d9a-40e1-8c87-6b2903f87d28)
 - - -
+## 2) 3-way, fast-forward와 rebase 비교
+- - -
+* * *
+### (1) 3-way merge와 rebase 비교
+#### ◈ merge
+  - 여러 분기가 생긴 변경 내용의 이력이 모두 그대로 남아 있기 때문에 이력이 복잡해짐
+#### ◈ rebase
+  - 히스토리가 선형으로 단순해지고 좀 더 깨끗한 이력을 남김
+
+  - 원래의 커밋 이력이 변경됨
+
+    - 정확한 이력을 남겨야 할 필요가 있을 경우에는 사용하면 안됨
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/cd3d734b-9391-4dd2-a61c-bf46b67df697)
+- - -
+### (2) fast-forward merge와 rebase 비교
+#### ◈ fast-forward merge
+  - 조상에 위치한 브랜치에서 선행 브랜치의 마지막으로 이동하는 병합
+#### ◈ rebase
+  - 두 갈래의 브랜치에서
+
+    - 기존의 베이스를 수정
+
+      -> 병합할 브랜치 마지막 커밋을 새로운 베이스로 수정하는 병합
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/4067ef18-238b-4353-87ce-18907356bef8)
+- - -
+### (3) 두 브랜치
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/22a3fb52-1f39-4449-82f9-f4c3687f85ee)
+- - -
+### (4) 1. 3-way 병합
+#### ◈ $ git checkout mater
+#### ◈ $ git merge experiment
+
+![image](https://github.com/JD12321/1-2-STD/assets/127118453/fd2878d3-c170-471c-a1b3-c61d389ed55f)
+- - -
